# baton-tetra

./: Cargo.toml
baton/: Cargo.toml
baton-derive/: Cargo.toml
baton-derive/src/: lib.rs
baton-tetra/: Cargo.toml
baton-tetra-derive/: Cargo.toml
baton-tetra-derive/src/: lib.rs
baton-tetra-test/: Cargo.toml
baton-tetra-test/src/: main.rs
baton-tetra/examples/: demo.rs  test.rs
baton-tetra/src/: control.rs  lib.rs  pair.rs  player_input.rs  source.rs
baton/src/: input_source.rs  lib.rs  traits.rs
