[package]
name = "baton-tetra"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.4"
serde = {version = "1.0.121", optional = true, features = ["derive"]}
tetra = "0.5.7"

[features]
serde_support = ["serde", "enum-map/serde", "tetra/serde_support"]
