[package]
name = "baton-tetra"
version = "0.1.0"
authors = ["Andrew Minnich <aminnich3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.121", optional = true, features = ["derive"]}
tetra = {version = "0.6.2", branch = "main", default-features = false}

[features]
serde_support = ["serde", "tetra/serde_support"]
