[package]
name = "baton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baton-derive = { path = "../baton-derive", optional = true }
serde = { version = "1.0.126", optional = true, features = ["derive"] }

[features]
default = ["derive"]
derive = ["baton-derive"]
